Add chatroom Dos and Don'ts in ordered list form.
Todo:
 - Add styles
 - Add JavaScript to highlight #do_N.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"/>
+    <title>Chatroom Pact - Room 11</title>
+</head>
+<body>
+    
+    <p class="info">These lists are <strong>not</strong> meant to be rules, but rather <em>guidelines</em> on proper etiquette for the <a href="http://chat.stackoverflow.com/rooms/11/php">PHP Chatroom</a>. However, repeated abuse in the chat may result in your message(s) being removed. Following them helps keeps the room clutter free, user friendly, and reduces annoyances. In addition, not following them when asking for help will most certainly work against you, as you will be disrupting the chat for others. We kindly ask that you follow them to make the chatroom a place that everybody can enjoy. Thank you for your cooperation.</p>
+
+    <h1>PHP Chatroom Pact</h1>
+    <h3>Chatroom Dos</h3>
+    <ol>
+        <li name="do_1" id="do_1">Use <a href="http://codepad.viper-7.com">viper-7.com</a>, <a href="http://eval.in">eval.in</a>, <a href="http://pastie.org/">pastie.org</a>, <a href="http://3v4l.org/">3v4l.org</a>, <a href="https://gist.github.com/">gist.github.com</a> or <a href="http://pastebin.com/">pastebin.com</a> to post code when asking for help.</li>
+        <li name="do_2" id="do_2"><a href="http://chat.stackoverflow.com/faq#formatting">Format your code</a> when asking for help.</li>
+        <li name="do_3" id="do_3">Be respectful toward everyone you engage.</li>
+        <li name="do_4" id="do_4">Extend charity outward to the SO community; if you get help, then help someone else.</li>
+        <li name="do_5" id="do_5">Greet with <em>"good morning"</em> (or other non day-time based greeting) regardless of your local time. See <a
+        href="http://www.total-knowledge.com/%7Eilya/mips/ugt.html">UGT</a>.</li>
+        <li name="do_6" id="do_6"><em>Large</em> images (includes animated GIFs), should be un-oneboxed by appending <code>?x</code> to file extension.</li>
+    </ol>
+
+    <h3>Chatroom Don'ts</h3>
+    <ol>
+        <li id="do_1" name="do_1">Dump a link to your question (spamming).</li>
+        <li id="do_2" name="do_2">ndomly ping people. Particularly, don't ping many people at once (usually you're just being nice, but it's annoying).</li>
+        <li id="do_3" name="do_3">Ask to ask a question. <em>"I have a problem, can anyone help?!"</li>
+        <li id="do_4" name="do_4">Repeat the same question. Every 30 seconds, since no-one replied to you yet!</li>
+        <li id="do_5" name="do_5">Star messages that are too specific to understand in general context, or random messages without interest.</li>
+        <li id="do_6" name="do_6">Use the room as a replacement for the main site. We are not the question banned users refugee camp.</li>
+        <li id="do_7" name="do_7">Start religious or political discussions. <em>(go make your own room)</em></li>
+        <li id="do_8" name="do_8">Ignore the "Chatroom Don'ts".</li>
+    </ol>
+</body>
+</html>
