--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"/>
     <title>Chatroom Pact - Room 11</title>
 </head>
-<body>
+<body style="margin: 8px;">
     
     <p class="info">These lists are <strong>not</strong> meant to be rules, but rather <em>guidelines</em> on proper etiquette for the <a href="http://chat.stackoverflow.com/rooms/11/php">PHP Chatroom</a>. However, repeated abuse in the chat may result in your message(s) being removed. Following them helps keeps the room clutter free, user friendly, and reduces annoyances. In addition, not following them when asking for help will most certainly work against you, as you will be disrupting the chat for others. We kindly ask that you follow them to make the chatroom a place that everybody can enjoy. Thank you for your cooperation.</p>
 
