fix markup and typo

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <h3>Chatroom Don'ts</h3>
     <ol>
         <li id="do_1" name="do_1">Dump a link to your question (spamming).</li>
-        <li id="do_2" name="do_2">ndomly ping people. Particularly, don't ping many people at once (usually you're just being nice, but it's annoying).</li>
-        <li id="do_3" name="do_3">Ask to ask a question. <em>"I have a problem, can anyone help?!"</li>
+        <li id="do_2" name="do_2">Randomly ping people. Particularly, don't ping many people at once (usually you're just being nice, but it's annoying).</li>
+        <li id="do_3" name="do_3">Ask to ask a question. <em>"I have a problem, can anyone help?!"</em></li>
         <li id="do_4" name="do_4">Repeat the same question. Every 30 seconds, since no-one replied to you yet!</li>
         <li id="do_5" name="do_5">Star messages that are too specific to understand in general context, or random messages without interest.</li>
         <li id="do_6" name="do_6">Use the room as a replacement for the main site. We are not the question banned users refugee camp.</li>
