--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
     <h3>Chatroom Don'ts</h3>
     <ol>
-        <li id="do_1" name="do_1">Dump a link to your question (spamming).</li>
-        <li id="do_2" name="do_2">ndomly ping people. Particularly, don't ping many people at once (usually you're just being nice, but it's annoying).</li>
-        <li id="do_3" name="do_3">Ask to ask a question. <em>"I have a problem, can anyone help?!"</li>
-        <li id="do_4" name="do_4">Repeat the same question. Every 30 seconds, since no-one replied to you yet!</li>
-        <li id="do_5" name="do_5">Star messages that are too specific to understand in general context, or random messages without interest.</li>
-        <li id="do_6" name="do_6">Use the room as a replacement for the main site. We are not the question banned users refugee camp.</li>
-        <li id="do_7" name="do_7">Start religious or political discussions. <em>(go make your own room)</em></li>
-        <li id="do_8" name="do_8">Ignore the "Chatroom Don'ts".</li>
+        <li id="dont_1" name="dont_1">Dump a link to your question (spamming).</li>
+        <li id="dont_2" name="dont_2">Randomly ping people. Particularly, don't ping many people at once (usually you're just being nice, but it's annoying).</li>
+        <li id="dont_3" name="dont_3">Ask to ask a question. <em>"I have a problem, can anyone help?!"</em></li>
+        <li id="dont_4" name="dont_4">Repeat the same question. Every 30 seconds, since no-one replied to you yet!</li>
+        <li id="dont_5" name="dont_5">Star messages that are too specific to understand in general context, or random messages without interest.</li>
+        <li id="dont_6" name="dont_6">Use the room as a replacement for the main site. We are not the question banned users refugee camp.</li>
+        <li id="dont_7" name="dont_7">Start religious or political discussions. <em>(go make your own room)</em></li>
+        <li id="dont_8" name="dont_8">Ignore the "Chatroom Don'ts".</li>
     </ol>
 </body>
 </html>
