--- a/index.html
+++ b/index.html
@@ -9,109 +9,152 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css"/>
     <title>Chatroom Pact - Room 11</title>
     <style>
-    html {
-        font-size: 14px;
-        line-height: 1.42857;
-    }
-    body {
-        color: #222;
-        background: #fff;
-        max-width: 60rem;
-        margin: 0 auto;
-        padding: 0 1rem;
-    }
-    h1, h2, h3, h4, h5, h6 {
-        color: #333;
-    }
-    em {
-        font-family: Cambria, Georgia, serif;
-    }
-    code {
-        padding: .2rem .4rem;
-        background: #f9f2f4;
-        color: #c7254e;
-        border-radius: .5rem;
-    }
-    code, em, strong {
-        pointer-events: none;
-    }
-    .info {
-        font-size: .85rem;
-        line-height: 1.680;
-        color: #999;
-    }
-    .info:after {
-        display: block;
-        content: "";
-        width: 100%;
-        border-bottom: 1px solid #eee;
-        margin: 2rem 0;
-    }
-    ol li {
-      -webkit-transition: background 0.3s ease; 
-         -moz-transition: background 0.3s ease; 
-           -o-transition: background 0.3s ease; 
-              transition: background 0.3s ease; 
-        border-radius: 3px;
-        padding: 2px;
-    }
-    .highlighted {
-        background-color: yellow;
-    }
+        html {
+            font-size:   14px;
+            line-height: 1.42857;
+        }
+
+        body {
+            color:      #222;
+            background: #fff;
+            max-width:  60rem;
+            margin:     0 auto;
+            padding:    0 1rem;
+        }
+
+        h1, h2, h3, h4, h5, h6 {
+            color: #333;
+        }
+
+        em {
+            font-family: Cambria, Georgia, serif;
+        }
+
+        code {
+            padding:       .2rem .4rem;
+            background:    #f9f2f4;
+            color:         #c7254e;
+            border-radius: .5rem;
+        }
+
+        code, em, strong {
+            pointer-events: none;
+        }
+
+        .info {
+            font-size:   .85rem;
+            line-height: 1.680;
+            color:       #999;
+        }
+
+        .info:after {
+            display:       block;
+            content:       "";
+            width:         100%;
+            border-bottom: 1px solid #eee;
+            margin:        2rem 0;
+        }
+
+        ol li {
+            -webkit-transition: background 0.3s ease;
+            -moz-transition:    background 0.3s ease;
+            -o-transition:      background 0.3s ease;
+            transition:         background 0.3s ease;
+            border-radius:      3px;
+            padding:            2px;
+        }
+
+        .highlighted {
+            background-color: yellow;
+        }
+
+        footer {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <p class="info">These lists are <strong>not</strong> meant to be rules, but rather <em>guidelines</em> on proper etiquette for the <a href="http://chat.stackoverflow.com/rooms/11/php">PHP Chatroom</a>. However, repeated abuse in the chat may result in your message(s) being removed. Following them helps keeps the room clutter free, user friendly, and reduces annoyances. In addition, not following them when asking for help will most certainly work against you, as you will be disrupting the chat for others. We kindly ask that you follow them to make the chatroom a place that everybody can enjoy. Thank you for your cooperation.</p>
+<div class="container">
+    <p class="info">These lists are <strong>not</strong> meant to be rules, but rather <em>guidelines</em> on proper
+        etiquette for the <a href="http://chat.stackoverflow.com/rooms/11/php">PHP Chatroom</a>. However, repeated abuse
+        in the chat may result in your message(s) being removed. Following them helps keeps the room clutter free, user
+        friendly, and reduces annoyances. In addition, not following them when asking for help will most certainly work
+        against you, as you will be disrupting the chat for others. We kindly ask that you follow them to make the
+        chatroom a place that everybody can enjoy. Thank you for your cooperation.</p>
 
-        <h1>PHP Chatroom Pact</h1>
-        <h3>Chatroom Dos</h3>
-        <ol>
-            <li name="do_1" id="do_1">Use <a href="http://codepad.viper-7.com">viper-7.com</a>, <a href="http://eval.in">eval.in</a>, <a href="http://pastie.org/">pastie.org</a>, <a href="http://3v4l.org/">3v4l.org</a>, <a href="https://gist.github.com/">gist.github.com</a> or <a href="http://pastebin.com/">pastebin.com</a> to post code when asking for help.</li>
-            <li name="do_2" id="do_2"><a href="http://chat.stackoverflow.com/faq#formatting">Format your code</a> when asking for help.</li>
-            <li name="do_3" id="do_3">Be respectful toward everyone you engage.</li>
-            <li name="do_4" id="do_4">Extend charity outward to the SO community; if you get help, then help someone else.</li>
-            <li name="do_5" id="do_5">Greet with <em>"good morning"</em> (or other non day-time based greeting) regardless of your local time. See <a href="http://www.total-knowledge.com/%7Eilya/mips/ugt.html">UGT</a>.</li>
-            <li name="do_6" id="do_6"><em>Large</em> images (includes animated GIFs), should be un-oneboxed by appending <code>?x</code> to file extension.</li>
-        </ol>
+    <h1>PHP Chatroom Pact</h1>
 
-        <h3>Chatroom Don'ts</h3>
-        <ol>
-            <li id="dont_1" name="dont_1">Dump a link to your question (spamming).</li>
-            <li id="dont_2" name="dont_2">Randomly ping people. Particularly, don't ping many people at once (usually you're just being nice, but it's annoying).</li>
-            <li id="dont_3" name="dont_3">Ask to ask a question. <em>"I have a problem, can anyone help?!"</em></li>
-            <li id="dont_4" name="dont_4">Repeat the same question. Every 30 seconds, since no-one replied to you yet!</li>
-            <li id="dont_5" name="dont_5">Star messages that are too specific to understand in general context, or random messages without interest.</li>
-            <li id="dont_6" name="dont_6">Use the room as a replacement for the main site. We are not the question banned users refugee camp.</li>
-            <li id="dont_7" name="dont_7">Start religious or political discussions. <em>(go make your own room)</em></li>
-            <li id="dont_8" name="dont_8">Ignore the "Chatroom Don'ts".</li>
-        </ol>
-    </div>
+    <h3>Chatroom Dos</h3>
+    <ol>
+        <li name="do_1" id="do_1">Use <a href="http://codepad.viper-7.com">viper-7.com</a>, <a href="http://eval.in">eval.in</a>,
+            <a href="http://pastie.org/">pastie.org</a>, <a href="http://3v4l.org/">3v4l.org</a>,
+            <a href="https://gist.github.com/">gist.github.com</a> or
+            <a href="http://pastebin.com/">pastebin.com</a> to post code when asking for help.
+        </li>
+        <li name="do_2" id="do_2"><a href="http://chat.stackoverflow.com/faq#formatting">Format your code</a> when
+            asking for help.
+        </li>
+        <li name="do_3" id="do_3">Be respectful toward everyone you engage.</li>
+        <li name="do_4" id="do_4">Extend charity outward to the SO community; if you get help, then help someone else.
+        </li>
+        <li name="do_5" id="do_5">Greet with <em>"good morning"</em> (or other non day-time based greeting) regardless
+            of your local time. See <a href="http://www.total-knowledge.com/%7Eilya/mips/ugt.html">UGT</a>.
+        </li>
+        <li name="do_6" id="do_6"><em>Large</em> images (includes animated GIFs), should be un-oneboxed by appending
+            <code>?x</code> to file extension.
+        </li>
+    </ol>
 
-    <script>
-        highlightLI = function(id, setHash) {
-            var existing = document.getElementsByClassName('highlighted');
-            for (var i = existing.length - 1; i >= 0; i--) {
-                existing[i].className = "";
-            };
-            var el = document.getElementById(id);
-            el.className = "highlighted";
+    <h3>Chatroom Don'ts</h3>
+    <ol>
+        <li id="dont_1" name="dont_1">Dump a link to your question (spamming).</li>
+        <li id="dont_2" name="dont_2">Randomly ping people. Particularly, don't ping many people at once (usually you're
+            just being nice, but it's annoying).
+        </li>
+        <li id="dont_3" name="dont_3">Ask to ask a question. <em>"I have a problem, can anyone help?!"</em></li>
+        <li id="dont_4" name="dont_4">Ask JavaScript questions here. That's what the <a href="http://chat.stackoverflow.com/rooms/17/javascript">JavaScript Room</a> is for.</li>
+        <li id="dont_5" name="dont_5">Repeat the same question. Every 30 seconds, since no-one replied to you yet!</li>
+        <li id="dont_6" name="dont_6">Star messages that are too specific to understand in general context, or random
+            messages without interest.
+        </li>
+        <li id="dont_7" name="dont_7">Use the room as a replacement for the main site. We are not the question banned
+            users refugee camp.
+        </li>
+        <li id="dont_8" name="dont_8">Start religious or political discussions. <em>(go make your own room)</em></li>
+        <li id="dont_9" name="dont_9">Ignore the "Chatroom Don'ts".</li>
+    </ol>
+</div>
 
-            if (setHash) {
-                document.location.hash = id;
-            }
+<footer>
+    <small>This page's source can be found and edited on <a
+            href="https://github.com/Room-11/Room-11.github.io">GitHub</a>.
+    </small>
+</footer>
+
+<script>
+    highlightLI = function (id, setHash) {
+        var existing = document.getElementsByClassName('highlighted');
+        for (var i = existing.length - 1; i >= 0; i--) {
+            existing[i].className = "";
         }
-        document.addEventListener("click", function(e) {
-            if (e.target.tagName == "LI") {
-                highlightLI(e.target.id, true);
-            }
-        }, true);
-        window.onload = function() {
-            if (document.location.hash != "") {
-                var id = document.location.hash.replace("#", "");
-                highlightLI(id, false);
-            }
+        var el = document.getElementById(id);
+        el.className = "highlighted";
+
+        if (setHash) {
+            document.location.hash = id;
         }
-    </script>
+    };
+    document.addEventListener("click", function (e) {
+        if (e.target.tagName == "LI") {
+            highlightLI(e.target.id, true);
+        }
+    }, true);
+    window.onload = function () {
+        if (document.location.hash != "") {
+            var id = document.location.hash.replace("#", "");
+            highlightLI(id, false);
+        }
+    }
+</script>
 </body>
 </html>
