Add don't 6. Don't tell us your problem is urgent.

--- a/index.html
+++ b/index.html
@@ -114,14 +114,16 @@
         <li id="dont_3" name="dont_3">Ask to ask a question. <em>"I have a problem, can anyone help?!"</em></li>
         <li id="dont_4" name="dont_4">Ask JavaScript questions here. That's what the <a href="http://chat.stackoverflow.com/rooms/17/javascript">JavaScript Room</a> is for.</li>
         <li id="dont_5" name="dont_5">Repeat the same question. Every 30 seconds, since no-one replied to you yet!</li>
-        <li id="dont_6" name="dont_6">Star messages that are too specific to understand in general context, or random
+        <li id="dont_6" name="dont_6">Tell us your problem is urgent. It's not going to motivate anyone to help you 
+            any faster.</li>
+        <li id="dont_7" name="dont_7">Star messages that are too specific to understand in general context, or random
             messages without interest.
         </li>
-        <li id="dont_7" name="dont_7">Use the room as a replacement for the main site. We are not the question banned
+        <li id="dont_8" name="dont_8">Use the room as a replacement for the main site. We are not the question banned
             users refugee camp.
         </li>
-        <li id="dont_8" name="dont_8">Start religious or political discussions. <em>(go make your own room)</em></li>
-        <li id="dont_9" name="dont_9">Ignore the "Chatroom Don'ts".</li>
+        <li id="dont_9" name="dont_9">Start religious or political discussions. <em>(go make your own room)</em></li>
+        <li id="dont_10" name="dont_10">Ignore the "Chatroom Don'ts".</li>
     </ol>
 </div>
 
