--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
         </li>
         <li id="dont_9"><p>Start religious or political discussions. <em>(go make your own room)</em></p></li>
         <li id="dont_10"><p>Ignore the "Chatroom Don'ts".</p></li>
+        <li id="dont_11">
+            <p>Dump a link to this document.</p>
+            <span class="description">Links to this document should be <em>supplimentary</em> to the conversation.</span>
+        </li>
     </ol>
 </div>
 
