fixed small typo supplimentary->supplementary

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <li id="dont_10"><p>Ignore the "Chatroom Don'ts".</p></li>
         <li id="dont_11">
             <p>Dump a link to this document.</p>
-            <span class="description">Links to this document should be <em>supplimentary</em> to the conversation.</span>
+            <span class="description">Links to this document should be <em>supplementary</em> to the conversation.</span>
         </li>
     </ol>
 </div>
