--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
         </li>
         <li id="dont_9"><p>Start religious or political discussions. <em>(go make your own room)</em></p></li>
         <li id="dont_10">
-            <p>Dump a link to this document.</p>
-            <span class="description">Links to this document should be <em>supplementary</em> to the conversation.</span>
+            <p>Dump a link to this document as a response to someone doing a "don't".</p>
+            <span class="description">Instead, explain to the person what the better approach would be.</span>
         </li>
     </ol>
 </div>
