--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 <div class="container">
     <p class="info">These lists are <strong>not</strong> rules, but rather <em>guidelines</em> on proper
         etiquette for the <a href="http://chat.stackoverflow.com/rooms/11/php">PHP Chatroom</a>. Following them helps keeps 
-        the room clutter free, user friendly, and reduces annoyances. In addition, not following them when asking for help 
-        will most certainly work against you, as you will be disrupting the chat for others. We kindly ask that you follow 
-        them to make the chatroom a place that everybody can enjoy. Thank you for your cooperation.</p>
+        the room clutter free, user friendly, and reduces annoyances.</p>
+        
+    <p class="info">Try to think of these as "tips" for making the room better for everyone.</p>
 
     <h1>PHP Chatroom</h1>
     
