--- a/index.html
+++ b/index.html
@@ -93,15 +93,22 @@
 </head>
 <body>
 <div class="container">
-    <p class="info">These lists are <strong>not</strong> rules, but rather <em>guidelines</em> on proper
+    <p class="info">The "Do's" and "Don'ts" are <strong>not</strong> rules, but rather <em>guidelines</em> on proper
         etiquette for the <a href="http://chat.stackoverflow.com/rooms/11/php">PHP Chatroom</a>. Following them helps keeps 
         the room clutter free, user friendly, and reduces annoyances.</p>
         
     <p class="info">Try to think of these as "tips" for making the room better for everyone.</p>
 
     <h1>PHP Chatroom</h1>
+
+    <h3>Chatroom Rules</h3>
+    <ol>
+        <li id="rule_1">
+            <p>Under no circumstances should you harrass other users for your own amusement.</p>
+        </li>
+    </ol>
     
-    <h3>Chatroom Dos</h3>
+    <h3>Chatroom Do's</h3>
     <ol>
         <li id="do_0">
             <p>Use common sense.</p>
