--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <h3>Chatroom Rules</h3>
     <ol>
         <li id="rule_1">
-            <p>Under no circumstances should you harrass other users for your own amusement.</p>
+            <p>Under no circumstances should you harrass other users.</p>
         </li>
     </ol>
     
