--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
             <p>Dump a link to this document as a response to someone doing a "don't".</p>
             <span class="description">Instead, explain to the person what the better approach would be.</span>
         </li>
+        <li id="dont_11">
+            <p>Be an ass cactus. Nobody likes an ass cactus.</p>
+        </li>
     </ol>
 </div>
 
