Make bootstrap CDN call protocol relative
Otherwise, causes errors (at least in chrome) when accessing page via HTTPS.

--- a/canonical.html
+++ b/canonical.html
@@ -26,8 +26,8 @@
     <title>Canonical Questions - Room 11</title>
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
     <link rel='icon' href='favicon.ico' type='image/x-icon'>
-    <link rel='stylesheet' href='http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css'>
-    <style>
+    <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css'>
+    <style>h
         html {
             font-size: 14px;
             line-height: 1.42857;
