Small JavaScript refactors
Refactor to use proper high-order function (forEach -> map).
Refactor to use addEventListener in place of onclick.

--- a/canonical.html
+++ b/canonical.html
@@ -109,8 +109,8 @@
 
         var resource, questionIds = [];
 
-        Object.keys(categories).forEach(function (category) {
-            questionIds.push(categories[category].join(';'));
+        questionIds = Object.keys(categories).map(function (categoryName) {
+            return categories[categoryName].join(';');
         });
 
         resource = document.createElement('script');
@@ -126,7 +126,7 @@
 
                 header.textContent = category;
                 header.id = category;
-                header.onclick = function () {
+                header.addEventListener('click', function () {
                     window.location.hash = category;
                 };
 
