--- a/canonical.html
+++ b/canonical.html
@@ -27,7 +27,7 @@
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
     <link rel='icon' href='favicon.ico' type='image/x-icon'>
     <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css'>
-    <style>h
+    <style>
         html {
             font-size: 14px;
             line-height: 1.42857;
