Code Pad currently offline due to funding issues

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <p>Use common sense.</p>
         </li>
         <li id="do_3">
-            <p>Use <a href="http://codepad.viper-7.com">viper-7.com</a>, <a href="http://eval.in">eval.in</a>,
+            <p>Use <a href="http://viper-7.com">viper-7.com</a>, <a href="http://eval.in">eval.in</a>,
                 <a href="http://pastie.org/">pastie.org</a>, <a href="http://3v4l.org/">3v4l.org</a>,
                 <a href="https://gist.github.com/">gist.github.com</a> or
                 <a href="http://pastebin.com/">pastebin.com</a> to post code when asking for help.
