--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             font-size:   14px;
             line-height: 1.42857;
         }
-
         body {
             color:      #222;
             background: #fff;
@@ -21,32 +20,26 @@
             margin:     0 auto;
             padding:    0 1rem;
         }
-
         h1, h2, h3, h4, h5, h6 {
             color: #333;
         }
-
         em {
             font-family: Cambria, Georgia, serif;
         }
-
         code {
             padding:       .2rem .4rem;
             background:    #f9f2f4;
             color:         #c7254e;
             border-radius: .5rem;
         }
-
         code, em, strong {
             pointer-events: none;
         }
-
         .info {
             font-size:   .85rem;
             line-height: 1.680;
             color:       #999;
         }
-
         .info:after {
             display:       block;
             content:       "";
@@ -54,7 +47,6 @@
             border-bottom: 1px solid #eee;
             margin:        2rem 0;
         }
-
         ol li {
             -webkit-transition: background 0.3s ease;
             -moz-transition:    background 0.3s ease;
@@ -63,7 +55,6 @@
             border-radius:      3px;
             padding:            2px;
         }
-
         li p {
             margin: 0;
         }
@@ -85,7 +76,6 @@
         .highlighted .description {
             display: block;
         }
-
         footer {
             text-align: center;
         }
@@ -108,10 +98,10 @@
             <p>Use common sense.</p>
         </li>
         <li id="do_3">
-            <p>Use <a href="http://viper-7.com">viper-7.com</a>, <a href="http://eval.in">eval.in</a>,
-                <a href="http://pastie.org/">pastie.org</a>, <a href="http://3v4l.org/">3v4l.org</a>,
-                <a href="https://gist.github.com/">gist.github.com</a> or
-                <a href="http://pastebin.com/">pastebin.com</a> to post code when asking for help.
+            <p>Use <a href="https://gist.github.com/">gist.github.com</a> to post code when asking for help
+                (other services such as <a href="http://3v4l.org/">3v4l.org</a>,
+                <a href="http://eval.in">eval.in</a> and
+                <a href="http://pastie.org/">pastie.org</a> are also available)
             </p>
             <span class="description">This is to prevent large wall of texts that may become obstrusive to conversations.</span>
         </li>
@@ -178,7 +168,6 @@
         }
         var el = document.getElementById(id);
         el.className = "highlighted";
-
         if (setHash) {
             document.location.hash = id;
         }
