--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <li id="do_3">
             <p>Use <a href="https://gist.github.com/">gist.github.com</a> to post code when asking for help
                 (other services such as <a href="http://3v4l.org/">3v4l.org</a>,
-                <a href="http://codepad.viper-7.com">viper-7.com</a>, <a href="http://eval.in">eval.in</a> and
+                <a href="http://eval.in">eval.in</a> and
                 <a href="http://pastie.org/">pastie.org</a> are also available)
             </p>
             <span class="description">This is to prevent large wall of texts that may become obstrusive to conversations.</span>
