--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <p>Use <a href="https://gist.github.com/">gist.github.com</a> to post code when asking for help
                 (other services such as <a href="http://3v4l.org/">3v4l.org</a>,
                 <a href="http://eval.in">eval.in</a> and
-                <a href="http://pastie.org/">pastie.org</a> are also available)
+                <a href="https://pastebin.com/">pastebin.com/</a> are also available)
             </p>
             <span class="description">This is to prevent large wall of texts that may become obstrusive to conversations.</span>
         </li>
