--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
             <p>Dump a link to this document as a response to someone doing a "don't".</p>
             <span class="description">Instead, explain to the person what the better approach would be.</span>
         </li>
+        <li id="dont_11">
+            <p>Listen to @JayIsTooCommon. He's always wrong.</p>
+        </li>
     </ol>
 </div>
 
