added a linux tutorial

--- a/tutorials.html
+++ b/tutorials.html
@@ -9,6 +9,7 @@
     <title>Room 11: PHP Tutorials/Guides</title>
 </head>
 <body>
+
 <div class="container">
 	<h1>Guides and Tutorials for Learning PHP</h1>
 	<p>Note: This guide assumes you already have an understanding of HTML/CSS.  It is highly recommended that you understand HTML/CSS before learning PHP.  <a href="https://www.freecodecamp.org/" target="_blank">Freecodecamp</a> offers practical tutorials in learning HTML/CSS/JS.</p>
@@ -83,9 +84,11 @@
 		<li><a href="https://www.digitalocean.com/community/tutorials/how-to-install-lemp-nginx-mysql-php-stack-on-arch-linux" target="_blank">Another setting up a LEMP environment (Linux [Arch], nginx, MySQL, PHP</a></li>
 	</ul>
 	
-	<!-- TODO: add guides for learning Linux 
 	<h3>Linux</h3>
-	-->
+	<ul>
+		<li><a href="https://www.digitalocean.com/community/tutorials/an-introduction-to-linux-basics" target="_blank">https://www.digitalocean.com/community/tutorials/an-introduction-to-linux-basics</a> - Linux basics</li>
+	</ul>
+	<p>In regards to troubleshooting in Linux, Google is your best friend.  Seriously.  If you have an error or problem, google the error or the nature of the problem, 90% of the time, someone else has encountered your situation as well, and you can find an answer pretty quickly. 10% of the time, it's a weird issue, and you'll either need to do more digging through google with some clever keywords, or ask someone.</p>
 	
 	<h2>Some other notes...</h2>
 	<p>If you have an aversion to Oracle products, you can use <a href="https://mariadb.org/" target="_blank">mariaDB</a> instead of MySQL which is virtually the same as MySQL, except that it is not owned by Oracle.</p>
@@ -104,5 +107,6 @@
 	</ul>
 	
 </div>
+
 </body>
 </html>
