--- a/tutorials.html
+++ b/tutorials.html
@@ -5,7 +5,7 @@
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-
+<!-- TODO: add some styles... -->
     <title>Room 11: PHP Tutorials/Guides</title>
 </head>
 <body>
@@ -87,6 +87,7 @@
 	<h3>Linux</h3>
 	<ul>
 		<li><a href="https://www.digitalocean.com/community/tutorials/an-introduction-to-linux-basics" target="_blank">https://www.digitalocean.com/community/tutorials/an-introduction-to-linux-basics</a> - Linux basics</li>
+		<!-- TODO: Add some more Linux guides -->
 	</ul>
 	<p>In regards to troubleshooting in Linux, Google is your best friend.  Seriously.  If you have an error or problem, google the error or the nature of the problem, 90% of the time, someone else has encountered your situation as well, and you can find an answer pretty quickly. 10% of the time, it's a weird issue, and you'll either need to do more digging through google with some clever keywords, or ask someone.</p>
 	
