--- a/tutorials.html
+++ b/tutorials.html
@@ -62,6 +62,7 @@
 	<p>Alright, you've made it this far, and the quirks of PHP haven't scared you away.  Here's additional material to further your learning.</p>
 	<ul>
 		<li><a href="https://patricklouys.com/professional-php/" target="_blank">https://patricklouys.com/professional-php/</a> This is a book written by the same author for the No-Framework Tutorial, but is updated.</li>
+		<li><a href="https://github.com/danack/example" target="_blank">Example project</a> - Shows how to use Xdebug, Behat tests, Docker for local development, Supervisord for background workers and Slim framework with Auryn DI. This is beneficial to see how a full-fledged PHP application would look working inside Docker, with requisite documentation, and example code.</li>
 		<li><a href="https://stackoverflow.com/a/5864000/2524730" target="_blank">https://stackoverflow.com/questions/5863870/how-should-a-model-be-structured-in-mvc</a> - an explanation of what models are in the MVC relationship</li>
 		<li><a href="https://stackoverflow.com/a/16356866/2524730" target="_blank">https://stackoverflow.com/questions/16356420/mvc-for-advanced-php-developers</a> - a list of videos and reading material</li>
 	</ul>
@@ -80,7 +81,7 @@
 	<ul>
 		<li><a href="https://www.digitalocean.com/community/tutorials/how-to-install-linux-apache-mysql-php-lamp-stack-on-ubuntu-16-04" target="_blank">Setting up a LAMP environment (Linux [Ubuntu], Apache, MySQL, PHP)</a></li>
 		<li><a href="https://www.digitalocean.com/community/tutorials/how-to-install-linux-nginx-mysql-php-lemp-stack-in-ubuntu-16-04" target="_blank">Setting up a LEMP environment (Linux [Ubuntu], nginx, MySQL, PHP)</a></li>
-		<li><a href="https://www.digitalocean.com/community/tutorials/how-to-install-lemp-nginx-mysql-php-stack-on-arch-linux" target="_blank">Another setting up a LEMP environment (Linux [Arch], nginx, MySQL, PHP</a></li>
+		<li><a href="https://www.digitalocean.com/community/tutorials/how-to-install-lemp-nginx-mysql-php-stack-on-arch-linux" target="_blank">Another setting up a LEMP environment (Linux [Arch], nginx, MySQL, PHP)</a></li>
 	</ul>
 	
 	<h3>Linux</h3>
