fix changes as per salathe, change link text for Danack's example, add a second id for VM section

--- a/tutorials.html
+++ b/tutorials.html
@@ -63,7 +63,7 @@
 	<p>Alright, you've made it this far, and the quirks of PHP haven't scared you away.  Here's additional material to further your learning.</p>
 	<ul>
 		<li><a href="https://patricklouys.com/professional-php/" target="_blank">https://patricklouys.com/professional-php/</a> This is a book written by the same author for the No-Framework Tutorial, but is updated.</li>
-		<li><a href="https://github.com/danack/example" target="_blank">Example project</a> - Shows how to use Xdebug, Behat tests, Docker for local development, Supervisord for background workers and Slim framework with Auryn DI. This is beneficial to see how a full-fledged PHP application would look working inside Docker, with requisite documentation, and example code.</li>
+		<li><a href="https://github.com/danack/example" target="_blank">https://github.com/danack/example</a> - Shows how to use Xdebug, Behat tests, Docker for local development, Supervisord for background workers and Slim framework with Auryn DI. This is beneficial to see how a full-fledged PHP application would look working inside Docker, with requisite documentation, and example code.</li>
 		<li><a href="https://stackoverflow.com/a/5864000/2524730" target="_blank">https://stackoverflow.com/questions/5863870/how-should-a-model-be-structured-in-mvc</a> - an explanation of what models are in the MVC relationship</li>
 		<li><a href="https://stackoverflow.com/a/16356866/2524730" target="_blank">https://stackoverflow.com/questions/16356420/mvc-for-advanced-php-developers</a> - a list of videos and reading material</li>
 	</ul>
@@ -77,7 +77,7 @@
 	<h3><a id="docker">Docker</a></h3>
 	<p><a href="https://docs.docker.com/get-started/" target="_blank">https://docs.docker.com/get-started/</a> - another common development environment is Docker.  It is an alternative to VMs because it does not require the setting up and maintenance that regular VMs do.  It is able to do this through the use of <a href="https://www.docker.com/what-container" target="_blank">containers</a>.</p>
 	
-	<h3><a id="roll-your-own-vm">Rolling Your Own VM</a></h3>
+	<h3><a id="roll-your-own-vm"><a id="rolling-your-own-vm">Rolling Your Own VM</a></a></h3>
 	<p>The options below are guides on setting up a development environment from scratch using a VM on your computer.</p>
 	<ul>
 		<li><a href="https://www.digitalocean.com/community/tutorials/how-to-install-linux-apache-mysql-php-lamp-stack-on-ubuntu-16-04" target="_blank">Setting up a LAMP environment (Linux [Ubuntu], Apache, MySQL, PHP)</a></li>
