Document the rule of waving

--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
             <p>Dump a link to this document as a response to someone doing a "don't".</p>
             <span class="description">Instead, explain to the person what the better approach would be.</span>
         </li>
+        <li id="dont_11">
+            <p>Break the alternating arm wave chain if you are a regular.</p>
+            <span class="description">If the last person replied o/ then you must reply \o, or if they replied \o then you must reply o/ ad infinitum, or until someone else breaks it.</span>
+        </li>
     </ol>
 </div>
 
